--- a/stocktrade/src/main/resources/templates/invistaPage.html
+++ b/stocktrade/src/main/resources/templates/invistaPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <title>StockTrade - Sobre</title>
+    <title>StockTrade - Invista</title>
 
     <link
       rel="canonical"
@@ -117,72 +117,137 @@
     </div>
 
     <div class="container mb-5">
+      <!-- Linha dos Cards -->
         <div class="row justify-content-center">
-          <div class="col-md-2">
+          <!-- Card 1 -->
+          <div class="col-md-1">
             <div class="card custom-card2">
-              <div class="card-body">
-                <div class="text-center">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <div class="">
                   <img
                     src="../static/images/carteira-icon.png"
-                    class="img-fluid max-img-width"
-                    alt="seguranca"
+                    class=""
+                    alt="icone carteira"
                   />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+
+          <!-- Card 1 - Texto -->
+          <div class="col-md-1">
+            <div class="">
+              <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
+                <div class="">
+                  <h5>Carteira</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div class="col-md-1">
             <div class="card custom-card2">
-              <div class="card-body">
-                <div class="text-center">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <div class="">
                   <img
                     src="../static/images/seguranca2-icon.png"
                     class="img-fluid max-img-width"
-                    alt="seguranca"
+                    alt="icone seguranca"
                   />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+
+          <!-- Card 2 - Texto -->
+          <div class="col-md-1">
+            <div class="">
+              <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
+                <div class="">
+                  <h5>Segurança</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div class="col-md-1">
             <div class="card custom-card2">
-              <div class="card-body">
-                <div class="text-center">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <div class="">
                   <img
                     src="../static/images/investimentos-icon.png"
-                    class="img-fluid max-img-width"
-                    alt="seguranca"
+                    class=""
+                    alt="icone investimentos"
                   />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+
+          <!-- Card 3 - Texto -->
+          <div class="col-md-1">
+            <div class="">
+              <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
+                <div class="">
+                  <h5>Investimentos</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div class="col-md-1">
             <div class="card custom-card2">
-              <div class="card-body">
-                <div class="text-center">
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <div class="">
                   <img
                     src="../static/images/compravenda-icon.png"
-                    class="img-fluid max-img-width"
-                    alt="seguranca"
+                    class=""
+                    alt="icone compra e venda"
                   />
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2">
+
+          <!-- Card 4 - Texto -->
+          <div class="col-md-1">
+            <div class="">
+              <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
+                <div class="">
+                  <h5 class="white-space-no-wrap">Compra e Venda</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 5 -->
+          <div class="col-md-1">
             <div class="card custom-card2">
-              <div class="card-body">
-                <div class="text-center">
-                  <img
-                    src="../static/images/dividendos-icon.png"
-                    class="img-fluid max-img-width"
-                    alt="seguranca"
-                  />
+              <div class="card-body d-flex align-items-center justify-content-center">
+                <img
+                  src="../static/images/dividendos-icon.png"
+                  class=""
+                  alt="icone dividendos"
+                />
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 5 - Texto -->
+          <div class="col-md-1">
+            <div class="">
+              <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
+                <div class="">
+                  <h5 class="white-space-no-wrap">Dividendos</h5>
                 </div>
               </div>
             </div>
           </div>
+
+          
         </div>
       </div>
       
