--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="invistaPage.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
