style: :art: Finalização Tela Invista
Adesão da tela invista, usuario não logado

--- a/stocktrade/src/main/resources/templates/cadastroPage.html
+++ b/stocktrade/src/main/resources/templates/cadastroPage.html
@@ -190,7 +190,7 @@
         </div>
       </div>
 
-      <footer class="footer py-3 container-fluid mt-5">
+      <footer class="footer py-3 container-fluid">
         <div
           class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
         >
