--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -126,11 +126,15 @@ body {
 footer{
   background-color: #010D50;
   bottom: 0;
-  position: fixed;
+  width: 100%;
 }
 
 .text-color-blue{
   color: #010D50;
+}
+
+.text-color-blue2{
+  color: #0328EE;
 }
 
 .custom-input {
@@ -164,12 +168,23 @@ footer{
 }
 
 .custom-card2 {
-  background-color: #0328EE;
+  background-color: #010D50;
   color: #fff;
   border: none;
   border-radius: 65px;
   width: 80px !important;
   height: 60px !important;
+}
+
+.custom-card3{
+  background-color: #010D50;
+  color: #fff;
+  border: none;
+  border-radius: 65px;
+  width: 300px !important;
+  height: 480px !important;   
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .img-fluid {
@@ -249,3 +264,12 @@ footer{
   text-decoration: underline !important;
   border-radius: 20px;
 }
+
+.no-wrap-text {
+  white-space: nowrap;
+}
+
+.negrito {
+  font-weight: bold;
+ }
+
