--- a/stocktrade/src/main/resources/templates/invistaPage.html
+++ b/stocktrade/src/main/resources/templates/invistaPage.html
@@ -109,7 +109,7 @@
       <div class="container row justify-content-center">
         <div class="col-md-6 mb-5 texts justify-content-center">
           <h2 class="titulo h4 max-width-550px">Invista Agora Mesmo!</h2>
-          <p class="fs-6 mt-4 mb-3 max-width-550px">
+          <p class="fs-6 mt-4 mb-6 max-width-550px">
             Venha conhecer esse mercado que cresce cada vez mais na atualidade! Aprenda a gerir seu dinheiro da melhor maneira com a StrockTrade
           </p>
         </div>
@@ -119,7 +119,7 @@
     <div class="container mb-5">
       <!-- Linha dos Cards -->
         <div class="row justify-content-center">
-          <!-- Card 1 -->
+          <!-- Card 1 Carteira -->
           <div class="col-md-1">
             <div class="card custom-card2">
               <div class="card-body d-flex align-items-center justify-content-center">
@@ -134,18 +134,18 @@
             </div>
           </div>
 
-          <!-- Card 1 - Texto -->
+          <!-- Card 1 - Carteira -->
           <div class="col-md-1">
             <div class="">
               <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
                 <div class="">
-                  <h5>Carteira</h5>
+                  <h6>Carteira</h6>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Card 2 -->
+          <!-- Card 2 - seguranca -->
           <div class="col-md-1">
             <div class="card custom-card2">
               <div class="card-body d-flex align-items-center justify-content-center">
@@ -160,18 +160,18 @@
             </div>
           </div>
 
-          <!-- Card 2 - Texto -->
+          <!-- Card 2 - Seguranca -->
           <div class="col-md-1">
             <div class="">
               <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
                 <div class="">
-                  <h5>Segurança</h5>
+                  <h6>Segurança</h6>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Card 3 -->
+          <!-- Card 3 - Investimentos -->
           <div class="col-md-1">
             <div class="card custom-card2">
               <div class="card-body d-flex align-items-center justify-content-center">
@@ -186,18 +186,18 @@
             </div>
           </div>
 
-          <!-- Card 3 - Texto -->
+          <!-- Card 3 - Investimentos -->
           <div class="col-md-1">
             <div class="">
               <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
                 <div class="">
-                  <h5>Investimentos</h5>
+                  <h6>Investimentos</h6>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Card 4 -->
+          <!-- Card - Compra e Venda -->
           <div class="col-md-1">
             <div class="card custom-card2">
               <div class="card-body d-flex align-items-center justify-content-center">
@@ -212,18 +212,18 @@
             </div>
           </div>
 
-          <!-- Card 4 - Texto -->
+          <!-- Card 4 - Compra e Venda -->
           <div class="col-md-1">
             <div class="">
-              <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
+              <div class="d-flex align-items-center justify-content-start mt-3 pt-4">
                 <div class="">
-                  <h5 class="white-space-no-wrap">Compra e Venda</h5>
+                  <h6 class="white-space-no-wrap">Compra e Venda</h6>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Card 5 -->
+          <!-- Card 5 - Dividendos-->
           <div class="col-md-1">
             <div class="card custom-card2">
               <div class="card-body d-flex align-items-center justify-content-center">
@@ -236,16 +236,146 @@
             </div>
           </div>
 
-          <!-- Card 5 - Texto -->
+          <!-- Card 5 - Dividendos -->
           <div class="col-md-1">
             <div class="">
               <div class="d-flex align-items-center justify-content-start mt-4 pt-4">
                 <div class="">
-                  <h5 class="white-space-no-wrap">Dividendos</h5>
+                  <h6 class="white-space-no-wrap">Dividendos</h6>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="container mb-4">
+            <div class="container row">
+              <div class="col-md mb-5 texts align-items-center justify-content-center">
+                <div class="justify-content-center">
+                  <h4 class="titulo h4 text-nowrap">Descubra já os benefícios de investir seu dinheiro!</h4>
+                  <p class="fs-6 mt-4 mb-3 text-center">
+                    Conheça todos os tipos de investimentos disponíveis na StockTrade e selecione o mais adequado aos seus interesses!
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="card-group justify-content-center">
+            <div class="mb-3 custom-card3 ms-5">
+              <div class="card-body">
+                <h5 class="card-title negrito text-center">FIIs</h5>
+                <p class="card-text">Fundo de investimento imobiliário é uma comunhão de recursos destinados à aplicação em empreendimentos imobiliários.</p>
+                <p class="card-text"><small class="text-body-secondary negrito">BENEFÍCIOS</small></p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Alta Liquidez</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Dividendos</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Médio Risco</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Longo Prazo</p>
+                <a
+                class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
+                >Invista Agora!</a>
+              </div>
+            </div>
+            <div class="mb-3 custom-card3 ms-5">
+              <div class="card-body">
+                <h5 class="card-title negrito text-center">Ações</h5>
+                <p class="card-text">Parcelas que compõem o capital social de uma empresa, ou seja, são as unidades de títulos emitidas por sociedades anônimas.</p>
+                <p class="card-text"><small class="text-body-secondary negrito">BENEFÍCIOS</small></p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Alta Rentabilidade</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Dividendos</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Alto Risco</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Curto/Médio Prazo</p>
+                <a
+                class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
+                >Invista Agora!</a>
+              </div>
+            </div>
+            <div class="mb-3 custom-card3 ms-5">
+              <div class="card-body">
+                <h5 class="card-title negrito text-center">ETFs</h5>
+                <p class="card-text">Um exchange-traded fund, ou fundo de índice, é um fundo de investimento negociado na Bolsa de Valores como se fosse uma ação.</p>
+                <p class="card-text"><small class="text-body-secondary negrito">BENEFÍCIOS</small></p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Alta Liquidez</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Alto Risco</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Baixa/Alta Rentabilidade</p>
+                <p class="card-text"><span class="text-color-blue2"> - </span> Curto/Longo Prazo</p>
+                <a
+                class="btn btn-outline-primary botao1 me-4 ms-5 justify-content-cente text-center"
+                >Invista Agora!</a>
+              </div>
+            </div>
+          </div>
+        </main>
+
+          <footer class="footer py-3 container-fluid mt-5">
+            <div
+              class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
+            >
+              <!-- Logo à esquerda -->
+              <a href="index.html">
+                <img
+                  src="../static/images/logo-bg-off.png"
+                  alt="Logo"
+                  class="img-fluid logo small-logo2 me-5 ms-5"
+                />
+              </a>
+    
+              <!-- Imagens à direita -->
+              <div class="d-flex">
+                <img
+                  src="../static/images/insta.png"
+                  alt="Instagram"
+                  class="img-fluid logo small-logo me-1"
+                />
+    
+                <img
+                  src="../static/images/facebook.png"
+                  alt="Facebook"
+                  class="img-fluid logo small-logo me-1"
+                />
+    
+                <img
+                  src="../static/images/linkedin.png"
+                  alt="LinkedIn"
+                  class="img-fluid logo small-logo me-1"
+                />
+              </div>
+            </div>
+    
+            <div
+              class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5"
+            >
+              <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
+                <li>
+                  <a
+                    href="index.html"
+                    class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
+                    >Home</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="#"
+                    class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
+                    >Invista</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="sobrePage.html"
+                    class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
+                    >Sobre</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="contatoPage.html"
+                    class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
+                    >Contato</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </footer>
 
           
         </div>
