--- a/stocktrade/src/main/resources/templates/cadastroPage.html
+++ b/stocktrade/src/main/resources/templates/cadastroPage.html
@@ -7,16 +7,7 @@
 
     <title>StockTrade - Cadastro</title>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/5.0/examples/headers/"
-    />
-
-    <!-- Bootstrap core CSS -->
-    <link
-      href="../static/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <style>
       .bd-placeholder-img {
