--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -7,16 +7,7 @@
 
   <title>StockTrade - Home</title>
 
-  <link
-    rel="canonical"
-    href="https://getbootstrap.com/docs/5.0/examples/headers/"
-  />
-
-  <!-- Bootstrap core CSS -->
-  <link
-    href="../static/bootstrap/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <style>
     .bd-placeholder-img {
@@ -35,17 +26,17 @@
   </style>
 
   <!-- Custom styles for this template -->
-  <link href="..//static/css/stylesheet.css" rel="stylesheet" />
+  <link href="css/stylesheet.css" rel="stylesheet" />
 
   <link
     rel="icon"
     type="image/x-icon"
-    href="../static/images/only-logo-bg-off.png"
+    href="images/only-logo-bg-off.png"
   />
 </head>
 
   <body id="home-page">
-    <svg xmlns="../static/images/logo-bg-off.png" style="display: none"></svg>
+    <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div class="container-fluid pt-3">
@@ -55,7 +46,7 @@
           <!-- logo -->
           <a href="index.html">
             <img
-              src="../static/images/logo-bg-off.png"
+              src="images/logo-bg-off.png"
               alt="Logo"
               class="img-fluid logo small-logo2 me-5"
             />
@@ -120,7 +111,7 @@
           </div>
           <div class="col-md-6 d-flex justify-content-end">
             <img
-              src="../static/images/laptop-home.png"
+              src="images/laptop-home.png"
               alt="Imagem laptop"
               class="img-fluid"
               style="width: 100%"
@@ -136,7 +127,7 @@
           <!-- Logo à esquerda -->
           <a href="index.html">
             <img
-              src="../static/images/logo-bg-off.png"
+              src="images/logo-bg-off.png"
               alt="Logo"
               class="img-fluid logo small-logo2 me-5 ms-5"
             />
@@ -145,19 +136,19 @@
           <!-- Imagens à direita -->
           <div class="d-flex">
             <img
-              src="../static/images/insta.png"
+              src="images/insta.png"
               alt="Instagram"
               class="img-fluid logo small-logo me-1"
             />
 
             <img
-              src="../static/images/facebook.png"
+              src="images/facebook.png"
               alt="Facebook"
               class="img-fluid logo small-logo me-1"
             />
 
             <img
-              src="../static/images/linkedin.png"
+              src="images/linkedin.png"
               alt="LinkedIn"
               class="img-fluid logo small-logo me-1"
             />
