--- a/stocktrade/src/main/resources/templates/cadastro.html
+++ b/stocktrade/src/main/resources/templates/cadastro.html
@@ -5,18 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
 
-    <title>StockTrade - Login</title>
+    <title>StockTrade - Cadastro</title>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/5.0/examples/headers/"
-    />
-
-    <!-- Bootstrap core CSS -->
-    <link
-      href="../static/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <style>
       .bd-placeholder-img {
@@ -35,16 +26,16 @@
     </style>
 
     <!-- Custom styles for this template -->
-    <link href="..//static/css/stylesheet.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" rel="stylesheet" />
 
     <link
       rel="icon"
       type="image/x-icon"
-      href="../static/images/only-logo-bg-off.png"
+      href="images/only-logo-bg-off.png"
     />
   </head>
   <body>
-    <svg xmlns="../static/images/logo-bg-off.png" style="display: none"></svg>
+    <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div class="container-fluid pt-3">
@@ -54,7 +45,7 @@
           <!-- logo -->
           <a href="index.html">
             <img
-              src="../static/images/logo-bg-off.png"
+              src="images/logo-bg-off.png"
               alt="Logo"
               class="img-fluid logo small-logo2 me-5"
             />
@@ -77,14 +68,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="sobre.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="contato.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -92,15 +83,11 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <!-- <button type="button" class="btn btn-outline-primary botao1 me-4">
-              Login
-            </button> -->
-
-            <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4"
+            <a href="login.html" class="btn btn-outline-primary botao1 me-4"
               >Login</a
             >
             <a
-              href="cadastroPage.html"
+              href="cadastro.html"
               class="btn btn-outline-primary botao1 me-4"
               >Cadastre-se</a
             >
@@ -108,13 +95,38 @@
         </header>
       </div>
 
-      <div class="container-fluid mt-5 container-img-background">
-        <div class="row justify-content-center">
+      <div class="container-fluid container-img-background2">
+        <div class="row justify-content-end">
           <div class="col-md-4">
-            <div class="card">
-              <div class="card-body">
-                <!-- <h5 class="card-title text-color-blue text-uppercase">Login</h5> -->
+            <div class="card2">
+              <div class="card-body2">
                 <form>
+                  <div class="mb-3">
+                    <label
+                      for="username"
+                      class="form-label text-color-blue text-uppercase"
+                      >Nome</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control custom-input"
+                      id="name"
+                      placeholder="Digite seu nome completo"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label
+                      for="username"
+                      class="form-label text-color-blue text-uppercase"
+                      >CPF</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control custom-input"
+                      id="cpf"
+                      placeholder="Digite seu CPF"
+                    />
+                  </div>
                   <div class="mb-3">
                     <label
                       for="username"
@@ -141,12 +153,25 @@
                       placeholder="Digite sua senha"
                     />
                   </div>
+                  <div class="mb-3">
+                    <label
+                      for="username"
+                      class="form-label text-color-blue text-uppercase"
+                      >Confirme a Senha</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control custom-input"
+                      id="confirmpassword"
+                      placeholder="Digite sua senha novamente"
+                    />
+                  </div>
                   <div class="text-center">
                     <button
                       type="submit"
                       class="btn btn-outline-primary botao1 mb-3 mt-3"
                     >
-                      Login
+                      Cadastrar
                     </button>
                   </div>
                 </form>
@@ -163,28 +188,28 @@
           <!-- Logo à esquerda -->
           <a href="index.html">
             <img
-              src="../static/images/logo-bg-off.png"
+              src="images/logo-bg-off.png"
               alt="Logo"
-              class="img-fluid logo small-logo2 me-5"
+              class="img-fluid logo small-logo2 me-5 ms-5"
             />
           </a>
 
           <!-- Imagens à direita -->
           <div class="d-flex">
             <img
-              src="../static/images/insta.png"
+              src="images/insta.png"
               alt="Instagram"
               class="img-fluid logo small-logo me-1"
             />
 
             <img
-              src="../static/images/facebook.png"
+              src="images/facebook.png"
               alt="Facebook"
               class="img-fluid logo small-logo me-1"
             />
 
             <img
-              src="../static/images/linkedin.png"
+              src="images/linkedin.png"
               alt="LinkedIn"
               class="img-fluid logo small-logo me-1"
             />
@@ -204,21 +229,21 @@
             </li>
             <li>
               <a
-                href="#"
+                href="invista.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="sobre.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="contato.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
