--- a/stocktrade/src/main/resources/templates/contato.html
+++ b/stocktrade/src/main/resources/templates/contato.html
@@ -7,16 +7,7 @@
 
     <title>StockTrade - Contato</title>
 
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/5.0/examples/headers/"
-    />
-
-    <!-- Bootstrap core CSS -->
-    <link
-      href="../static/bootstrap/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <style>
       .bd-placeholder-img {
@@ -35,16 +26,16 @@
     </style>
 
     <!-- Custom styles for this template -->
-    <link href="..//static/css/stylesheet.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" rel="stylesheet" />
 
     <link
       rel="icon"
       type="image/x-icon"
-      href="../static/images/only-logo-bg-off.png"
+      href="images/only-logo-bg-off.png"
     />
   </head>
   <body id="contato-page">
-    <svg xmlns="../static/images/logo-bg-off.png" style="display: none"></svg>
+    <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
       <div class="container-fluid pt-3">
@@ -54,7 +45,7 @@
           <!-- logo -->
           <a href="index.html">
             <img
-              src="../static/images/logo-bg-off.png"
+              src="images/logo-bg-off.png"
               alt="Logo"
               class="img-fluid logo small-logo2 me-5"
             />
@@ -77,14 +68,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="sobre.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="contato.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white active"
                 >Contato</a
               >
@@ -92,8 +83,8 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4">Login</a>
-            <a href="cadastroPage.html" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
+            <a href="login.html" class="btn btn-outline-primary botao1 me-4">Login</a>
+            <a href="cadastro.html" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
           </div>
         </header>
       </div>
@@ -144,7 +135,7 @@
         <!-- Logo à esquerda -->
         <a href="index.html">
           <img
-            src="../static/images/logo-bg-off.png"
+            src="images/logo-bg-off.png"
             alt="Logo"
             class="img-fluid logo small-logo2 me-5 ms-5"
           />
@@ -153,19 +144,19 @@
         <!-- Imagens à direita -->
         <div class="d-flex">
           <img
-            src="../static/images/insta.png"
+            src="images/insta.png"
             alt="Instagram"
             class="img-fluid logo small-logo me-1"
           />
 
           <img
-            src="../static/images/facebook.png"
+            src="images/facebook.png"
             alt="Facebook"
             class="img-fluid logo small-logo me-1"
           />
 
           <img
-            src="../static/images/linkedin.png"
+            src="images/linkedin.png"
             alt="LinkedIn"
             class="img-fluid logo small-logo me-1"
           />
@@ -185,21 +176,21 @@
           </li>
           <li>
             <a
-              href="#"
+              href="invista.html"
               class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
               >Invista</a
             >
           </li>
           <li>
             <a
-              href="sobrePage.html"
+              href="sobre.html"
               class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
               >Sobre</a
             >
           </li>
           <li>
             <a
-              href="contatoPage.html"
+              href="contato.html"
               class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
               >Contato</a
             >
