feat: :sparkles: Implementado o cadastro do usuário no programa
Foram criadas as classes de DTO referentes ao Usuário, bem como implementada toda a parte de cadastro do cliente. Para esta implementação, foram criadas as classes de ServiceCadastro e ControllerCadastro, bem como, adaptadas as classes Usuario e UsuarioRepository. Ainda no que tange a implementação do cadastro foi ajustada toda a página de cadastro para "conversar" com o controller.

Issue #20 / Implementado o cadastro do cliente

--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -69,14 +69,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="sobre.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="contato.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -84,11 +84,11 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4"
+            <a href="login.html" class="btn btn-outline-primary botao1 me-4"
               >Login</a
             >
             <a
-              href="cadastroPage.html"
+              href="cadastro.html"
               class="btn btn-outline-primary botao1 me-4"
               >Cadastre-se</a
             >
@@ -175,14 +175,14 @@
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="sobre.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="contato.html"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
