feat: :sparkles: Adicionado o login
Feito o sistema de login no backend (atualização do html para pegar o usuário e senha digitados). Criação dos controller de Login, Contato, Invista, Sobre, Contato. Criação do ServiceLogin. Atualização das telas (links para as outras telas). Atualização da classe LoggingAspect para incluir o log de acesso as outras páginas.

--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
           class="d-flex align-items-center justify-content-between py-3 mb-4 no-flex-wrap mx-5"
         >
           <!-- logo -->
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/logo-bg-off.png"
               alt="Logo"
@@ -55,28 +55,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="/"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white active"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="invista.html"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobre.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contato.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -84,11 +84,11 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <a href="login.html" class="btn btn-outline-primary botao1 me-4"
+            <a href="login" class="btn btn-outline-primary botao1 me-4"
               >Login</a
             >
             <a
-              href="cadastro.html"
+              href="cadastro"
               class="btn btn-outline-primary botao1 me-4"
               >Cadastre-se</a
             >
@@ -125,7 +125,7 @@
           class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
         >
           <!-- Logo à esquerda -->
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/logo-bg-off.png"
               alt="Logo"
@@ -161,28 +161,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="/"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobre.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contato.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
