--- a/stocktrade/src/main/resources/templates/contato.html
+++ b/stocktrade/src/main/resources/templates/contato.html
@@ -43,7 +43,7 @@
           class="d-flex align-items-center justify-content-between py-3 mb-4 no-flex-wrap mx-5"
         >
           <!-- logo -->
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/logo-bg-off.png"
               alt="Logo"
@@ -54,28 +54,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="/"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobre.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contato.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white active"
                 >Contato</a
               >
@@ -83,8 +83,8 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <a href="login.html" class="btn btn-outline-primary botao1 me-4">Login</a>
-            <a href="cadastro.html" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
+            <a href="login" class="btn btn-outline-primary botao1 me-4">Login</a>
+            <a href="cadastro" class="btn btn-outline-primary botao1 me-4">Cadastre-se</a>
           </div>
         </header>
       </div>
@@ -133,7 +133,7 @@
         class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
       >
         <!-- Logo à esquerda -->
-        <a href="index.html">
+        <a href="/">
           <img
             src="images/logo-bg-off.png"
             alt="Logo"
@@ -169,28 +169,28 @@
         <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
           <li>
             <a
-              href="index.html"
+              href="/"
               class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
               >Home</a
             >
           </li>
           <li>
             <a
-              href="invista.html"
+              href="invista"
               class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
               >Invista</a
             >
           </li>
           <li>
             <a
-              href="sobre.html"
+              href="sobre"
               class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
               >Sobre</a
             >
           </li>
           <li>
             <a
-              href="contato.html"
+              href="contato"
               class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
               >Contato</a
             >
