--- a/stocktrade/src/main/resources/templates/login.html
+++ b/stocktrade/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@
           class="d-flex align-items-center justify-content-between py-3 mb-4 no-flex-wrap mx-5"
         >
           <!-- logo -->
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/logo-bg-off.png"
               alt="Logo"
@@ -54,28 +54,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="/"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobre.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contato.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -83,15 +83,11 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <!-- <button type="button" class="btn btn-outline-primary botao1 me-4">
-              Login
-            </button> -->
-
-            <a href="login.html" class="btn btn-outline-primary botao1 me-4"
+            <a href="login" class="btn btn-outline-primary botao1 me-4"
               >Login</a
             >
             <a
-              href="cadastro.html"
+              href="cadastro"
               class="btn btn-outline-primary botao1 me-4"
               >Cadastre-se</a
             >
@@ -104,7 +100,6 @@
           <div class="col-md-4">
             <div class="card">
               <div class="card-body">
-                <!-- <h5 class="card-title text-color-blue text-uppercase">Login</h5> -->
                 <form>
                   <div class="mb-3">
                     <label
@@ -130,12 +125,14 @@
                       class="form-control custom-input"
                       id="password"
                       placeholder="Digite sua senha"
+                      oninput="limitSenha(this)"
                     />
                   </div>
                   <div class="text-center">
                     <button
                       type="submit"
                       class="btn btn-outline-primary botao1 mb-3 mt-3"
+                      onclick="enviarLogin(event)"
                     >
                       Login
                     </button>
@@ -188,28 +185,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="index"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="invista.html"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobre.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contato.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -219,6 +216,63 @@
       </footer>
     </main>
 
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
+
+    <script>
+      function validateNome(input) {
+        input.value = input.value.replace(/[^a-zA-Z\s]/g, ''); // permite apenas letras e espaços
+      }
+
+      function limitSenha(input) {
+        input.value = input.value.replace(/\D/g, ''); // permite apenas dígitos
+        if (input.value.length > 8) {
+          input.value = input.value.slice(0, 8); // limita a 8 dígitos
+        }
+      }
+  
+      function limitSenhaAutenticacao(input) {
+        input.value = input.value.replace(/\D/g, ''); // permite apenas dígitos
+        if (input.value.length > 4) {
+          input.value = input.value.slice(0, 4); // limita a 4 dígitos
+        }
+      }
+  
+      function enviarLogin(event) {
+        event.preventDefault();
+        console.log("validateForm function called");
+  
+        let email = document.getElementById("username").value;
+        let password = document.getElementById("password").value;
+  
+        if (email == "" || password == "") {
+          alert("Preencha todos os campos!");
+          return false;
+        }
+  
+        if (password.length < 8) {
+          alert("A senha deve ter no mínimo 8 caracteres!");
+          return false;
+        }
+
+        if (!email.includes("@") || !email.includes(".com")) {
+          alert("E-mail inválido!");
+          return false;
+        }
+
+        fetch('/login', {
+          method: 'post',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            username: username,
+            password: password
+          })
+        })
+  
+        alert("Login realizado com sucesso!");
+        return true;
+      }
+    </script>
   </body>
 </html>
