--- a/stocktrade/src/main/resources/templates/sobre.html
+++ b/stocktrade/src/main/resources/templates/sobre.html
@@ -7,7 +7,12 @@
 
     <title>StockTrade - Sobre</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
 
     <style>
       .bd-placeholder-img {
@@ -28,11 +33,7 @@
     <!-- Custom styles for this template -->
     <link href="css/stylesheet.css" rel="stylesheet" />
 
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="images/only-logo-bg-off.png"
-    />
+    <link rel="icon" type="image/x-icon" href="images/only-logo-bg-off.png" />
   </head>
   <body id="sobre-page">
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
@@ -43,7 +44,7 @@
           class="d-flex align-items-center justify-content-between py-3 mb-4 no-flex-wrap mx-5"
         >
           <!-- logo -->
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/logo-bg-off.png"
               alt="Logo"
@@ -54,28 +55,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="/"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="#"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobrePage.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white active"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contatoPage.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
@@ -83,13 +84,11 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <a href="loginPage.html" class="btn btn-outline-primary botao1 me-4"
+            <a href="login" class="btn btn-outline-primary botao1 me-4"
               >Login</a
             >
 
-            <a
-              href="cadastroPage.html"
-              class="btn btn-outline-primary botao1 me-4"
+            <a href="cadastro" class="btn btn-outline-primary botao1 me-4"
               >Cadastre-se</a
             >
           </div>
@@ -230,7 +229,7 @@
           class="mx-5 d-flex justify-content-between align-items-center border-bottom border-white pb-4 pt-2 pe-5"
         >
           <!-- Logo à esquerda -->
-          <a href="index.html">
+          <a href="/">
             <img
               src="images/logo-bg-off.png"
               alt="Logo"
@@ -266,28 +265,28 @@
           <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
             <li>
               <a
-                href="index.html"
+                href="/"
                 class="nav-link px-2 link-secondary text-color-white text-uppercase text-white"
                 >Home</a
               >
             </li>
             <li>
               <a
-                href="invista.html"
+                href="invista"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Invista</a
               >
             </li>
             <li>
               <a
-                href="sobre.html"
+                href="sobre"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Sobre</a
               >
             </li>
             <li>
               <a
-                href="contato.html"
+                href="contato"
                 class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
                 >Contato</a
               >
