--- a/stocktrade/src/main/resources/templates/sobre.html
+++ b/stocktrade/src/main/resources/templates/sobre.html
@@ -7,7 +7,7 @@
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
-      <div th:replace="~{fragments/headerFragment :: header}"></div>
+      <div th:replace="~{fragments/headerFragment :: header('Sobre')}"></div>
 
       <div class="container mb-4 justify-content-center">
         <div class="container row justify-content-center">
