--- a/stocktrade/src/main/resources/templates/cadastro.html
+++ b/stocktrade/src/main/resources/templates/cadastro.html
@@ -8,7 +8,7 @@
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
-      <div th:replace="~{fragments/headerFragment :: header}"></div>
+      <div th:replace="~{fragments/headerFragment :: header('Cadastro')}"></div>
 
       <div class="container-fluid container-img-background2">
         <div class="row justify-content-end">
