--- a/stocktrade/src/main/resources/templates/contato.html
+++ b/stocktrade/src/main/resources/templates/contato.html
@@ -5,7 +5,7 @@
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
-      <div th:replace="~{fragments/headerFragment :: header}"></div>
+      <div th:replace="~{fragments/headerFragment :: header('Contato')}"></div>
 
       <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3">
         <div class="row justify-content-center mt-5 texts">
