--- a/stocktrade/src/main/resources/templates/fragments/headerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerFragment.html
@@ -1,8 +1,7 @@
-<div class="container-fluid pt-3" th:fragment="header">
+<div class="container-fluid pt-3" th:fragment="header(currentPage)">
   <header
     class="d-flex align-items-center justify-content-between py-3 mb-4 no-flex-wrap mx-5"
-    
-  >
+    >
     <!-- logo -->
     <a href="/">
       <img
@@ -13,34 +12,15 @@
     </a>
 
     <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
-      <li>
-        <a
-          href="/"
-          class="nav-link px-2 link-secondary text-color-white text-uppercase text-white active"
-          >Home</a
-        >
-      </li>
-      <li>
-        <a
-          href="invista"
-          class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-          >Invista</a
-        >
-      </li>
-      <li>
-        <a
-          href="sobre"
-          class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-          >Sobre</a
-        >
-      </li>
-      <li>
-        <a
-          href="contato"
-          class="nav-link px-2 link-dark text-color-white text-uppercase text-white"
-          >Contato</a
-        >
-      </li>
+
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/', 'Home', ${currentPage})}"></li>
+
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/invista', 'Invista', ${currentPage})}"></li>
+
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/sobre', 'Sobre', ${currentPage})}"></li>
+
+      <li th:replace="~{fragments/header/navLinkHeader :: navLinkHeader('/contato', 'Contato', ${currentPage})}"></li>
+
     </ul>
 
     <div class="col-md-3 text-end">
