--- a/stocktrade/src/main/resources/templates/login.html
+++ b/stocktrade/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <svg xmlns="images/logo-bg-off.png" style="display: none"></svg>
 
     <main>
-      <div th:replace="~{fragments/headerFragment :: header}"></div>
+      <div th:replace="~{fragments/headerFragment :: header('Login')}"></div>
 
       <div class="container-fluid mt-5 container-img-background">
         <div class="row justify-content-center">
