--- a/stocktrade/src/main/resources/templates/fragments/headerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/headerFragment.html
@@ -7,7 +7,7 @@
       <img
         src="images/logo-bg-off.png"
         alt="Logo"
-        class="img-fluid logo small-logo2 me-5"
+        class="logo small-logo2 me-5"
       />
     </a>
 
