--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <main>
       <div th:replace="~{fragments/headerFragment :: header('Home')}"></div>
 
-      <div class="container-fluid mt-5 mb-4">
+      <div class="container-fluid mt-5 mb-4 pdb5">
         <div class="row ms-5 mt-5">
           <div class="col-md-6 mt-5 texts">
             <h1 class="titulo1 h1">
