fix: :bug: Correção do footer na pagina de Contato

--- a/stocktrade/src/main/resources/templates/contato.html
+++ b/stocktrade/src/main/resources/templates/contato.html
@@ -7,7 +7,7 @@
     <main>
       <div th:replace="~{fragments/headerFragment :: header('Contato')}"></div>
 
-      <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3">
+      <div class="container-fluid mt-5 justify-content-center pe-5 ps-5 mt-3 pdb5">
         <div class="row justify-content-center mt-5 texts">
           <!-- Coluna dos campos do formulário -->
           <div class="col-md-6">
