feat: :sparkles: Adicionado os gráficos que serão usados posteriormente.
Gráficos adicionados como fragmentos, estão comentados na index apenas para visualização.

--- a/stocktrade/src/main/resources/templates/index.html
+++ b/stocktrade/src/main/resources/templates/index.html
@@ -32,6 +32,9 @@
             />
           </div>
         </div>
+
+        <!-- <div th:replace="~{fragments/grafico/graficoSimplesFragment :: graficoSimples}"></div> -->
+        <!-- <div th:replace="~{fragments/grafico/graficoVelaFragment :: graficoVela}"></div> -->
       </div>
 
       <footer th:replace="~{fragments/footerFragment :: footer}"></footer>
