--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -283,3 +283,15 @@ footer{
 .pdb5{
   padding-bottom: 5%;
 }
+
+#chart {
+  max-width: 650px;
+  margin: 35px auto;
+  background-color: #fff;
+}
+
+#chartVela {
+  max-width: 650px;
+  margin: 35px auto;
+  background-color: #fff;
+}
