style: :art: Atualização do css
Co-authored-by: talessoares <talessoares@users.noreply.github.com> Atualização do css

--- a/stocktrade/src/main/resources/static/css/stylesheet.css
+++ b/stocktrade/src/main/resources/static/css/stylesheet.css
@@ -3,25 +3,46 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,600,700');
 
 body {
-  background-color: #010725;
-  color: #fff;
+  background-color: var(--darker-blue);
+  color: var(--white);
   font-family: 'DM Sans', sans-serif;
   font-size: 14px;
 }
 
-.small-logo2{
+footer {
+  background-color: var(--dark-blue);
+  bottom: 0;
+  width: 100%;
+}
+
+:root {
+  --ligther-blue: #031FB4;
+  --light-blue: #0328EE;
+  --darker-blue: #010725;
+  --dark-blue: #010D50;
+  --light-green: #2DC24E;
+  --white: #fff;
+  --black: #000;
+  --gray: #909093;
+}
+
+/* LOGO */
+.logo-small,
+.logo-smaller,
+.logo-xsmall {
+  height: auto;
+}
+
+.logo-small {
   max-width: 50%;
-  height: auto;
 }
 
-.smaller-logo {
+.logo-smaller {
   max-width: 15%;
-  height: auto;
 }
 
-.xsmaller-logo {
+.logo-xsmall {
   max-width: 10%;
-  height: auto;
 }
 
 .logo:hover {
@@ -29,14 +50,9 @@ body {
   transition: transform 0.3s ease;
 }
 
-.move-left {
-  margin-right: auto !important;
-}
+/* END CSS LOGO */
 
-.no-flex-wrap {
-  flex-wrap: nowrap !important;
-}
-
+/* HEADER */
 .nav li a.nav-link:hover {
   transition: color 0.5s ease, text-decoration 0.5s ease;
   border-radius: 20px;
@@ -44,70 +60,29 @@ body {
   background: radial-gradient(circle, hsla(231, 98%, 16%, 1) 0%, hsla(230, 100%, 20%, 1) 100%);
   background: -moz-radial-gradient(circle, hsla(231, 98%, 16%, 1) 0%, hsla(230, 100%, 20%, 1) 100%);
   background: -webkit-radial-gradient(circle, hsla(231, 98%, 16%, 1) 0%, hsla(230, 100%, 20%, 1) 100%);
-  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#010D50", endColorstr="#001167", GradientType=1 );
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr="#010D50", endColorstr="#001167", GradientType=1);
 }
+/* END CSS HEADER */
 
+/* CSS BOTAO */
 .botao1 {
-  background-color: #0328EE;
+  background-color: var(--light-blue);
   border-radius: 20px;
   border-style: none;
-  color: #fff;
+  color: var(--white);
   text-transform: uppercase;
   padding: 15px 30px;
   transition: background-color 0.3s;
   font-size: 16px;
 }
 
-.sobreMenu {
-  background-color: #010D50;
-  border-radius: 20px;
-  border-style: none;
-  color: #fff;
-  text-transform: uppercase;
-  padding: 60px 120px;
-  transition: background-color 0.3s;
-  font-size: 16px;
-}
-
 .botao1:hover {
-  background-color: #031FB4;
+  background-color: var(--ligther-blue);
 }
 
-.texts{
-  padding-top: 9rem!important;
-}
+/* END CSS BOTAO */
 
-.custom-sublinhado {
-  position: relative;
-  transition: color 2s ease;
-}
-
-.custom-sublinhado::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1.5px; /* Altura do sublinhado */
-  bottom: -2px; /* Ajuste a distância entre o sublinhado e a palavra aqui */
-  left: 0;
-  background-color: #031FB4; /* Cor do sublinhado */
-}
-
-.h1{
-  font-size: 80px;
-}
-
-.h2{
-  font-size: 64px; 
-}
-
-.h3{
-  font-size: 16px;
-}
-
-.h4{
-  font-size: 56px;
-}
-
+/* CSS WIDTH */
 .max-width-800px {
   max-width: 800px;
 }
@@ -124,27 +99,12 @@ body {
   max-width: 550px;
 }
 
-footer{
-  background-color: #010D50;
-  bottom: 0;
-  width: 100%;
-}
+/* END CSS WIDTH */
 
-.text-color-blue{
-  color: #010D50;
-}
-
-.preto{
-  color: black !important;
-}
-
-.text-color-blue2{
-  color: #0328EE;
-}
-
+/* CSS INPUT */
 .custom-input {
-  background-color: #010D50;
-  color: #fff;
+  background-color: var(--dark-blue);
+  color: var(--white);
   border: none;
   border-radius: 20px;
   width: 100%;
@@ -152,19 +112,22 @@ footer{
 }
 
 .custom-input::placeholder {
-  color: #fff;
+  color: var(--white);
 }
 
 .custom-input:focus {
   background-color: rgb(95, 95, 95);
-  border-color: #a0a0a0;
+  border-color: var(--gray);
   box-shadow: none;
-  color: #010D50 !important;
+  color: var(--dark-blue) !important;
 }
 
+/* END CSS INPUT */
+
+/* CSS CUSTOM CARD */
 .custom-card {
-  background-color: #010D50;
-  color: #fff;
+  background-color: var(--dark-blue);
+  color: var(--white);
   border: none;
   border-radius: 60px;
   width: 600px !important;
@@ -173,28 +136,28 @@ footer{
 }
 
 .custom-card2 {
-  background-color: #010D50;
-  color: #fff;
+  background-color: var(--dark-blue);
+  color: var(--white);
   border: none;
   border-radius: 65px;
   width: 80px !important;
   height: 60px !important;
 }
 
-.custom-card3{
-  background-color: #010D50;
-  color: #fff;
+.custom-card3 {
+  background-color: var(--dark-blue);
+  color: var(--white);
   border: none;
   border-radius: 65px;
   width: 300px !important;
-  height: 480px !important;   
+  height: 480px !important;
   flex-direction: column;
   align-items: flex-start;
 }
 
 .custom-card4 {
-  background-color: #010D50;
-  color: #fff;
+  background-color: var(--dark-blue);
+  color: var(--white);
   border-radius: 60px;
   width: 470px !important;
   height: 190px;
@@ -202,28 +165,12 @@ footer{
 }
 
 .custom-card5 {
-  background-color: #fff;
-  color: #2DC24E;
+  background-color: var(--white);
+  color: var(--light-green);
   border-radius: 60px;
   width: 430px !important;
   height: 50px;
   margin: 0;
-}
-
-.img-fluid {
-  max-width: 100%; /* Garante que a imagem não ultrapasse o tamanho do card */
-  height: auto; /* Mantém a proporção da imagem */
-}
-
-.card-text {
-  color: #fff;
-  font-size: 16px;
-  margin-top: 15px; /* Ajuste conforme necessário */
-}
-
-.text-center {
-  text-align: center;
-  margin-top: 15px;
 }
 
 .card {
@@ -251,18 +198,58 @@ footer{
   margin-bottom: 30%;
 }
 
-.card-body{
+.card-body {
   padding-top: 5%;
   padding-bottom: 5%;
 }
 
-.card-body2{
+.card-body2 {
   padding-top: 5%;
   padding-bottom: 5%;
   padding-left: 5%;
   padding-right: 5%;
   border-radius: 20px;
-  background-color: #fff;
+  background-color: var(--white);
+}
+
+.card-text {
+  color: var(--white);
+  font-size: 16px;
+  margin-top: 15px;
+}
+
+.altura-card {
+  height: 25px;
+}
+
+.home-logado-card {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  padding-left: 350px;
+}
+
+.home-logado-card2 {
+  margin-left: 18px;
+  padding-top: 0px;
+  margin-top: 10px;
+}
+
+.home-logado-card3 {
+  padding-top: 0px;
+  margin-top: 10px;
+}
+
+/* END CSS CUSTOM CARD */
+
+/* CSS OUTROS */
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.text-center {
+  text-align: center;
+  margin-top: 15px;
 }
 
 .container-img-background {
@@ -276,38 +263,94 @@ footer{
   background-image: url('../images/cadastro-pic.png');
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed; 
+  background-attachment: fixed;
 }
 
-.form-row > div {
+.form-row>div {
   float: left;
   width: 50%;
-  padding-left: .25rem!important;
-  padding-right: .25rem!important;
+  padding-left: .25rem !important;
+  padding-right: .25rem !important;
 }
 
 .mb-10 {
   margin-bottom: 10%;
 }
 
-/* Estilo para o link ativo (sublinhado) */
 .nav-link.active {
   text-decoration: underline !important;
   border-radius: 20px;
 }
 
-.no-wrap-text {
-  white-space: nowrap;
+.margem-esquerda {
+  margin-left: -340;
 }
 
-.negrito {
-  font-weight: bold;
- }
-
-.cinza{
- color: #909093;
+.fonte-arial {
+  font-family: Arial;
 }
 
+.text-color-blue {
+  color: var(--dark-blue);
+}
+
+.preto {
+  color: var(--black) !important;
+}
+
+.text-color-blue2 {
+  color: var(--light-blue);
+}
+
+.cinza {
+  color: var(--gray);
+}
+
+.sobreMenu {
+  background-color: var(--dark-blue);
+  border-radius: 20px;
+  border-style: none;
+  color: var(--white);
+  text-transform: uppercase;
+  padding: 60px 120px;
+  transition: background-color 0.3s;
+  font-size: 16px;
+}
+
+.texts {
+  padding-top: 9rem !important;
+}
+
+.custom-sublinhado {
+  position: relative;
+  transition: color 2s ease;
+}
+
+.custom-sublinhado::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1.5px;
+  bottom: -2px;
+  left: 0;
+  background-color: var(--ligther-blue);
+}
+
+h1 {
+  font-size: 80px;
+}
+
+h2 {
+  font-size: 64px;
+}
+
+h4 {
+  font-size: 56px;
+}
+
+/* END CSS OUTROS */
+
+/* CSS CUSTOM PADDING */
 .custom-padding-left {
   padding-left: 210px;
 }
@@ -320,89 +363,64 @@ footer{
   padding-left: 10px;
 }
 
-.custom-padding-left4{
+.custom-padding-left4 {
   padding-left: 185px;
 }
 
-.custom-padding-left5{
+.custom-padding-left5 {
   padding-left: 250px;
 }
 
-.altura-card {
-  height: 25px;
+/* END CSS CUSTOM PADDING */
 
-}
-
-.home-logado-card {
-  padding-top: 0px;
-  padding-bottom: 15px;
-  padding-left: 350px;
-}
-
-.home-logado-card2{
-  margin-left: 18px;
-  padding-top: 0px;
-  margin-top: 10px;
-}
-
-.home-logado-card3{
-  padding-top: 0px;
-  margin-top: 10px;
-}
-
-.margem-esquerda{
-  margin-left: -340;
-}
-
-.fonte-arial{
-  font-family: Arial;
-}
-
-#chart, .chart-box {
-    padding-top: 20px;
-    padding-left: 10px;
-    background: #fff;
-    border: 1px solid #ddd;
-    box-shadow: 0 22px 35px -16px rgba(0,0,0, 0.1);
+/* CSS GRAFICO */
+#chart,
+.chart-box {
+  padding-top: 20px;
+  padding-left: 10px;
+  background: var(--white);
+  border: 1px solid #ddd;
+  box-shadow: 0 22px 35px -16px rgba(0, 0, 0, 0.1);
 }
 
 select.flat-select {
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    background: #008FFB url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg/' width='60px' height='60px'><polyline fill='white' points='46.139,15.518 25.166,36.49 4.193,15.519'/></svg>") no-repeat scroll right 2px top 9px / 16px 16px;
-    border: 0 none;
-    border-radius: 3px;
-    color: #fff;
-    font-family: arial,tahoma;
-    font-size: 16px;
-    font-weight: bold;
-    outline: 0 none;
-    height: 33px;
-    padding: 5px 20px 5px 10px;
-    text-align: center;
-    text-indent: 0.01px;
-    text-overflow: "";
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    transition: all 0.3s ease 0s;
-    width: auto;
-    -webkit-transition: 0.3s ease all;
-    -moz-transition: 0.3s ease all;
-    -ms-transition: 0.3s ease all;
-    -o-transition: 0.3s ease all;
-    transition: 0.3s ease all;
-  }
-  select.flat-select:focus, select.flat-select:hover {
-    border: 0;
-    outline: 0;
-  }
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: #008FFB url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg/' width='60px' height='60px'><polyline fill='white' points='46.139,15.518 25.166,36.49 4.193,15.519'/></svg>") no-repeat scroll right 2px top 9px / 16px 16px;
+  border: 0 none;
+  border-radius: 3px;
+  color: var(--white);
+  font-family: arial, tahoma;
+  font-size: 16px;
+  font-weight: bold;
+  outline: 0 none;
+  height: 33px;
+  padding: 5px 20px 5px 10px;
+  text-align: center;
+  text-indent: 0.01px;
+  text-overflow: "";
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  transition: all 0.3s ease 0s;
+  width: auto;
+  -webkit-transition: 0.3s ease all;
+  -moz-transition: 0.3s ease all;
+  -ms-transition: 0.3s ease all;
+  -o-transition: 0.3s ease all;
+  transition: 0.3s ease all;
+}
 
+select.flat-select:focus,
+select.flat-select:hover {
+  border: 0;
+  outline: 0;
+}
 
 .apexcharts-canvas {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 #html {
-    display: none;
+  display: none;
 }
-
+/* END CSS GRAFICO */
