--- a/stocktrade/src/main/resources/templates/sobre.html
+++ b/stocktrade/src/main/resources/templates/sobre.html
@@ -12,7 +12,7 @@
       <div class="container mb-4 justify-content-center">
         <div class="container row justify-content-center">
           <div class="col-md-6 mb-5 texts justify-content-center">
-            <h2 class="titulo h2 max-width-550px">Sobre StockTrade</h2>
+            <h2 class="max-width-550px">Sobre StockTrade</h2>
             <p class="fs-6 mt-4 mb-3 max-width-550px">
               A StockTrade, uma empresa líder no mercado financeiro,
               destacando-se como uma plataforma revolucionária para investidores
