--- a/stocktrade/src/main/resources/templates/contato.html
+++ b/stocktrade/src/main/resources/templates/contato.html
@@ -11,7 +11,7 @@
         <div class="row justify-content-center mt-5 texts">
           <!-- Coluna dos campos do formulário -->
           <div class="col-md-6">
-            <h1 class="h1">Contate-nos!</h1>
+            <h1>Contate-nos!</h1>
             <form>
                 <div class="form-row">
                     <div class="col-md-6 mb-3">
