--- a/stocktrade/src/main/resources/templates/fragments/footerFragment.html
+++ b/stocktrade/src/main/resources/templates/fragments/footerFragment.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="mx-5 d-flex justify-content-between align-items-center pb-2 ps-5">
-    <ul class="nav col-12 col-md-auto mb-2 mb-md-0 move-left">
+    <ul class="nav col-12 col-md-auto mb-2 mb-md-0 ml-0">
       <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('/', 'Home')}"></li>
 
       <li th:replace="~{fragments/footer/textLinkFooter :: textLinkFooter('invista', 'Invista')}"></li>
