--- a/stocktrade/src/main/resources/templates/invista.html
+++ b/stocktrade/src/main/resources/templates/invista.html
@@ -12,7 +12,7 @@
       <div class="container mb-4 justify-content-center">
         <div class="container row justify-content-center">
           <div class="col-md-6 mb-5 texts justify-content-center">
-            <h2 class="titulo h4 max-width-550px">Invista Agora Mesmo!</h2>
+            <h4 class="max-width-550px">Invista Agora Mesmo!</h4>
             <p class="fs-6 mt-4 mb-6 max-width-550px">
               Venha conhecer esse mercado que cresce cada vez mais na
               atualidade! Aprenda a gerir seu dinheiro da melhor maneira com a
@@ -179,7 +179,7 @@
                 class="col-md mb-5 texts align-items-center justify-content-center"
               >
                 <div class="justify-content-center">
-                  <h4 class="titulo h4 text-nowrap">
+                  <h4 class="text-nowrap">
                     Descubra já os benefícios de investir seu dinheiro!
                   </h4>
                   <p class="fs-6 mt-4 mb-3 text-center">
@@ -194,13 +194,13 @@
           <div class="card-group justify-content-center">
             <div class="mb-3 custom-card3 ms-5">
               <div class="card-body">
-                <h5 class="card-title negrito text-center">FIIs</h5>
+                <h5 class="card-title fw-bold text-center">FIIs</h5>
                 <p class="card-text">
                   Fundo de investimento imobiliário é uma comunhão de recursos
                   destinados à aplicação em empreendimentos imobiliários.
                 </p>
                 <p class="card-text">
-                  <small class="text-body-secondary negrito">BENEFÍCIOS</small>
+                  <small class="text-body-secondary fw-bold">BENEFÍCIOS</small>
                 </p>
                 <p class="card-text">
                   <span class="text-color-blue2"> - </span> Alta Liquidez
@@ -222,13 +222,13 @@
             </div>
             <div class="mb-3 custom-card3 ms-5">
               <div class="card-body">
-                <h5 class="card-title negrito text-center">Ações</h5>
+                <h5 class="card-title fw-bold text-center">Ações</h5>
                 <p class="card-text">
                   Parcelas que compõem o capital social de uma empresa, ou seja,
                   são as unidades de títulos emitidas por sociedades anônimas.
                 </p>
                 <p class="card-text">
-                  <small class="text-body-secondary negrito">BENEFÍCIOS</small>
+                  <small class="text-body-secondary fw-bold">BENEFÍCIOS</small>
                 </p>
                 <p class="card-text">
                   <span class="text-color-blue2"> - </span> Alta Rentabilidade
@@ -250,14 +250,14 @@
             </div>
             <div class="mb-3 custom-card3 ms-5">
               <div class="card-body">
-                <h5 class="card-title negrito text-center">ETFs</h5>
+                <h5 class="card-title fw-bold text-center">ETFs</h5>
                 <p class="card-text">
                   Um exchange-traded fund, ou fundo de índice, é um fundo de
                   investimento negociado na Bolsa de Valores como se fosse uma
                   ação.
                 </p>
                 <p class="card-text">
-                  <small class="text-body-secondary negrito">BENEFÍCIOS</small>
+                  <small class="text-body-secondary fw-bold">BENEFÍCIOS</small>
                 </p>
                 <p class="card-text">
                   <span class="text-color-blue2"> - </span> Alta Liquidez
